--- a/Bank.UserService/Properties/launchSettings.json
+++ b/Bank.UserService/Properties/launchSettings.json
@@ -5,9 +5,9 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5075",
+      "applicationUrl": "http://192.168.1.2:5075",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
