Project | Add Origin Environment & Change Launch Settings

--- a/Bank.ExchangeService/.env.template
+++ b/Bank.ExchangeService/.env.template
@@ -3,6 +3,7 @@
 
 # Application
 BANK_USER_APPLICATION_PROFILE=Development
+BANK_APPLICATION_CORS_ORIGINS=http://localhost:5173
 
 # Frontend
 BANK_EXCHANGE_FRONTEND_BASE_URL=http://localhost:5173
